# mlops-project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  append_changelog.sh  docker-compose.yml  generate_docs.sh  prometheus.yml  pyproject.toml  pytest.ini  tasks.py
.github/workflows/: ci.yaml  monitor_drift.yml  retrain.yml
docs/: search.js  src.html
docs/src/: data_loader.html  data_models.html  main.html  model.html  models.html  preprocess.html  schema.html  train_model.html  utils.html
models/: model.pkl
src/: config.yaml  data_loader.py  data_models.py  main.py  model.py  monitor_drift.py  preprocess.py  retrain_model.py  schema.py  serve.py  tasks.py  train_model.py  ui.py
src/tests/: test_data_loader.py  test_model.py  test_preprocess.py
