[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = "template for building an mlops project"
authors = ["Jyothish CHANDRASENAN <jkcg.learning@gmail.com>"]
license = "Apache"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
cloudpathlib = "^0.18.1"
pydantic = "^2.8.2"
pandera = "^0.20.1"
mlflow = "^2.14.2"
omegaconf = "^2.3.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
coverage = "^7.5.4"
ruff = "^0.5.1"
bandit = "^1.7.9"
mypy = "^1.10.1"
pdoc = "^14.5.1"
commitizen = "^3.27.0"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
